--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "pify": "^3.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
+    "react-hooks": "^1.0.1",
     "react-router-dom": "^6.3.0",
     "read-pkg": "^4.0.1",
     "require-directory": "^2.1.1",
