--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "emoji-regex": "^7.0.3",
     "error-ex": "^1.3.2",
     "escape-string-regexp": "^1.0.5",
+    "express": "^4.18.1",
     "find-up": "^3.0.0",
     "get-caller-file": "^2.0.5",
     "gql": "^1.1.2",
