--- a/server/package.json
+++ b/server/package.json
@@ -3,21 +3,242 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
-  "scripts": {
-    "start": "node server.js",
-    "watch": "nodemon server.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
+    "abbrev": "^1.1.1",
+    "accepts": "^1.3.7",
+    "ansi-align": "^3.0.0",
+    "ansi-regex": "^4.1.0",
+    "ansi-styles": "^4.2.1",
+    "anymatch": "^3.1.1",
+    "aproba": "^1.2.0",
+    "are-we-there-yet": "^1.1.5",
+    "array-flatten": "^1.1.1",
     "bcrypt": "^5.0.0",
+    "balanced-match": "^1.0.0",
+    "binary-extensions": "^2.0.0",
+    "bl": "^2.2.1",
+    "bluebird": "^3.5.1",
+    "body-parser": "^1.19.0",
+    "boxen": "^4.2.0",
+    "brace-expansion": "^1.1.11",
+    "braces": "^3.0.2",
+    "bson": "^1.1.4",
+    "buffer-equal-constant-time": "^1.0.1",
+    "bytes": "^3.1.0",
+    "cacheable-request": "^6.1.0",
+    "camelcase": "^5.3.1",
+    "chalk": "^3.0.0",
+    "chokidar": "^3.3.1",
+    "chownr": "^1.1.4",
+    "ci-info": "^2.0.0",
+    "cli-boxes": "^2.2.0",
+    "clone-response": "^1.0.2",
+    "code-point-at": "^1.1.0",
+    "color-convert": "^2.0.1",
+    "color-name": "^1.1.4",
+    "concat-map": "^0.0.1",
+    "configstore": "^5.0.1",
+    "console-control-strings": "^1.1.0",
+    "content-disposition": "^0.5.3",
+    "content-type": "^1.0.4",
+    "cookie": "^0.4.0",
+    "cookie-signature": "^1.0.6",
+    "core-util-is": "^1.0.2",
+    "crypto-random-string": "^2.0.0",
+    "debug": "^2.6.9",
+    "decompress-response": "^3.3.0",
+    "deep-extend": "^0.6.0",
+    "defer-to-connect": "^1.1.3",
+    "delegates": "^1.0.0",
+    "denque": "^1.4.1",
+    "depd": "^1.1.2",
+    "destroy": "^1.0.4",
+    "detect-libc": "^1.0.3",
+    "dot-prop": "^5.2.0",
+    "duplexer3": "^0.1.4",
+    "ecdsa-sig-formatter": "^1.0.11",
+    "ee-first": "^1.1.1",
+    "emoji-regex": "^7.0.3",
+    "encodeurl": "^1.0.2",
+    "end-of-stream": "^1.4.4",
+    "escape-goat": "^2.1.1",
+    "escape-html": "^1.0.3",
+    "etag": "^1.8.1",
+    "fill-range": "^7.0.1",
     "express": "^4.17.1",
+    "fresh": "^0.5.2",
+    "finalhandler": "^1.1.2",
+    "forwarded": "^0.1.2",
+    "fs-minipass": "^1.2.7",
+    "fs.realpath": "^1.0.0",
+    "fsevents": "^2.1.3",
+    "gauge": "^2.7.4",
+    "get-stream": "^4.1.0",
+    "glob": "^7.1.7",
+    "glob-parent": "^5.1.2",
+    "global-dirs": "^2.0.1",
+    "got": "^9.6.0",
+    "graceful-fs": "^4.2.3",
     "graphql": "^15.5.0",
+    "has-unicode": "^2.0.1",
+    "has-flag": "^3.0.0",
+    "has-yarn": "^2.1.0",
+    "http-cache-semantics": "^4.1.0",
+    "http-errors": "^1.7.2",
+    "iconv-lite": "^0.4.24",
+    "ignore-by-default": "^1.0.1",
+    "ignore-walk": "^3.0.4",
+    "import-lazy": "^2.1.0",
+    "imurmurhash": "^0.1.4",
+    "inflight": "^1.0.6",
+    "inherits": "^2.0.3",
+    "ini": "^1.3.8",
+    "ipaddr.js": "^1.9.1",
+    "is-binary-path": "^2.1.0",
+    "is-ci": "^2.0.0",
+    "is-extglob": "^2.1.1",
+    "is-fullwidth-code-point": "^2.0.0",
+    "is-glob": "^4.0.1",
+    "is-npm": "^4.0.0",
+    "is-number": "^7.0.0",
+    "is-obj": "^2.0.0",
+    "is-installed-globally": "^0.3.2",
+    "is-path-inside": "^3.0.2",
+    "is-typedarray": "^1.0.0",
+    "is-yarn-global": "^0.3.0",
+    "isarray": "^1.0.0",
+    "json-buffer": "^3.0.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.10"
+    "jwa": "^1.4.1",
+    "jws": "^3.2.2",
+    "kareem": "^2.3.1",
+    "keyv": "^3.1.0",
+    "latest-version": "^5.1.0",
+    "lodash.includes": "^4.3.0",
+    "lodash.isboolean": "^3.0.3",
+    "lodash.isinteger": "^4.0.4",
+    "lodash.isnumber": "^3.0.3",
+    "lodash.isplainobject": "^4.0.6",
+    "lodash.isstring": "^4.0.1",
+    "lodash.once": "^4.1.1",
+    "lowercase-keys": "^1.0.1",
+    "make-dir": "^3.1.0",
+    "media-typer": "^0.3.0",
+    "memory-pager": "^1.5.0",
+    "merge-descriptors": "^1.0.1",
+    "methods": "^1.1.2",
+    "mime": "^1.6.0",
+    "mime-types": "^2.1.27",
+    "mime-db": "^1.44.0",
+    "mimic-response": "^1.0.1",
+    "minimatch": "^3.0.4",
+    "minimist": "^1.2.5",
+    "minipass": "^2.9.0",
+    "minizlib": "^1.3.3",
+    "mongodb": "^3.5.6",
+    "mkdirp": "^0.5.5",
+    "mongoose": "^5.9.10",
+    "mongoose-legacy-pluralize": "^1.0.2",
+    "mpath": "^0.7.0",
+    "mquery": "^3.2.2",
+    "ms": "^2.0.0",
+    "needle": "^2.6.0",
+    "negotiator": "^0.6.2",
+    "node-addon-api": "^3.2.1",
+    "node-pre-gyp": "^0.15.0",
+    "nopt": "^1.0.10",
+    "nodemon": "^2.0.3",
+    "normalize-path": "^3.0.0",
+    "normalize-url": "^4.5.1",
+    "npm-bundled": "^1.1.2",
+    "npm-normalize-package-bin": "^1.0.1",
+    "npm-packlist": "^1.4.8",
+    "npmlog": "^4.1.2",
+    "number-is-nan": "^1.0.1",
+    "object-assign": "^4.1.1",
+    "on-finished": "^2.3.0",
+    "once": "^1.4.0",
+    "os-homedir": "^1.0.2",
+    "os-tmpdir": "^1.0.2",
+    "osenv": "^0.1.5",
+    "p-cancelable": "^1.1.0",
+    "package-json": "^6.5.0",
+    "parseurl": "^1.3.3",
+    "path-is-absolute": "^1.0.1",
+    "path-to-regexp": "^0.1.7",
+    "picomatch": "^2.2.2",
+    "prepend-http": "^2.0.0",
+    "process-nextick-args": "^2.0.1",
+    "proxy-addr": "^2.0.6",
+    "pstree.remy": "^1.1.7",
+    "pupa": "^2.0.1",
+    "pump": "^3.0.0",
+    "qs": "^6.7.0",
+    "range-parser": "^1.2.1",
+    "raw-body": "^2.4.0",
+    "rc": "^1.2.8",
+    "readable-stream": "^2.3.7",
+    "readdirp": "^3.3.0",
+    "regexp-clone": "^1.0.0",
+    "registry-auth-token": "^4.1.1",
+    "registry-url": "^5.1.0",
+    "require_optional": "^1.0.1",
+    "resolve-from": "^2.0.0",
+    "responselike": "^1.0.2",
+    "rimraf": "^2.7.1",
+    "safe-buffer": "^5.1.2",
+    "safer-buffer": "^2.1.2",
+    "saslprep": "^1.0.3",
+    "sax": "^1.2.4",
+    "semver-diff": "^3.1.1",
+    "semver": "^5.7.1",
+    "serve-static": "^1.14.1",
+    "send": "^0.17.1",
+    "set-blocking": "^2.0.0",
+    "setprototypeof": "^1.1.1",
+    "sift": "^7.0.1",
+    "signal-exit": "^3.0.3",
+    "sliced": "^1.0.1",
+    "sparse-bitfield": "^3.0.3",
+    "statuses": "^1.5.0",
+    "string-width": "^4.2.0",
+    "string_decoder": "^1.1.1",
+    "strip-ansi": "^5.2.0",
+    "strip-json-comments": "^2.0.1",
+    "supports-color": "^5.5.0",
+    "tar": "^4.4.19",
+    "term-size": "^2.2.0",
+    "to-readable-stream": "^1.0.0",
+    "to-regex-range": "^5.0.1",
+    "toidentifier": "^1.0.0",
+    "touch": "^3.1.0",
+    "type-fest": "^0.8.1",
+    "type-is": "^1.6.18",
+    "typedarray-to-buffer": "^3.1.5",
+    "undefsafe": "^2.0.3",
+    "unique-string": "^2.0.0",
+    "unpipe": "^1.0.0",
+    "update-notifier": "^4.1.0",
+    "url-parse-lax": "^3.0.0",
+    "util-deprecate": "^1.0.2",
+    "utils-merge": "^1.0.1",
+    "vary": "^1.1.2",
+    "wide-align": "^1.1.3",
+    "widest-line": "^3.1.0",
+    "wrappy": "^1.0.2",
+    "write-file-atomic": "^3.0.3",
+    "xdg-basedir": "^4.0.0",
+    "yallist": "^3.1.1"
   },
-  "devDependencies": {
-    "nodemon": "^2.0.3"
-  }
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "sc_mern-book-search"
+  },
+  "author": "schris48",
+  "license": "MIT"
 }
